remove min-height of Homepage flexslider, prevents issues on smaller devices.

--- a/assets/sass/partials/_flexslider.scss
+++ b/assets/sass/partials/_flexslider.scss
@@ -30,7 +30,7 @@ html[xmlns] .slides {display: block;}
 	width: 100%;
 
 	@media screen and (min-width: $medium-screen) {
-		min-height: 500px;
+		//min-height: 500px;
 	}
 
 	ul {
